   Jourdan)

### Code generation and optimizations:

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

### Standard library:

- #9582: Add Array.{find_opt,find_map,split,combine}.
  (Nicolás Ojeda Bär, review by Daniel Bünzli and Gabriel Scherer)

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #9650, #9651: keep refactoring the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis and Florian Angeletti)

- #9994: Make Types.type_expr a private type, and abstract marking mechanism
  (Jacques Garrigue and Takafumi Saikawa,
   review by Gabriel Scherer and Leo White)

- #10007: Driver.compile_common: when typing a .ml file, return the
  compilation unit signature (inferred or from the .cmi) in addition
  to the implementation and the coercion.
  (Leandro Ostera, review by Gabriel Scherer and Thomas Refis)

* #10061, #10078: remove library `ocamlopttoplevel`, remove modules
  `Opttoploop`, `Opttopstart`, which are replaced by `Toploop` and `Topstart` in
  library `ocamltoplevel`, made available in native code.

### Build system:

- #9191, #10091: take the LDFLAGS variable into account, except on
  flexlink-using systems.
  (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
   report by Ralph Seichter)

### Bug fixes:

- #10005: Try expanding aliases in Ctype.nondep_type_rec
  (Stephen Dolan, review by Gabriel Scherer, Leo White and Xavier Leroy)

- #10071: Fix bug in tests/misc/weaklifetime.ml that was reported in #10055
  (Damien Doligez and Gabriel Scherer, report by David Allsopp)

- #10072, #10085: Check that sizes and offsets in stack frame descriptors
  do not overflow the 16-bit fields where they are stored.
  (Xavier Leroy, report by Github user pveber, review by Gabriel Scherer)


OCaml 4.12.0
------------

### Language features:
